@@ -1,6 +1,12 @@
 This is the CHANGELOG for amavisd-milter.
 
 20060319:
+	amavisd-milter-1.0.5
+
+	Portability release. amavisd-milter can be used with sendmail 8.12
+	(smfi_opensocket() is now optional).
+
+20060319:
 	Check if smfi_opensocket() is in milter library. It was introduced
 	in sendmail 8.13. Older versions opens communication socket in
 	smfi_main().
@@ -97,4 +103,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.18.2.1 2006/03/19 10:34:56 reho Exp $
+$Id: CHANGES,v 1.18.2.2 2006/03/19 10:56:41 reho Exp $
